<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ShowAllExpensesActivity"
    android:layout_marginLeft="8sp"
    android:layout_marginRight="8sp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleShowAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/all_expenses"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleShowAll"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/txtId"
                android:layout_width="30sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="4sp"
                android:textColor="@android:color/white"
                android:text="@string/id"
                app:layout_constraintEnd_toStartOf="@+id/txtAmount"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:padding="4sp"
                android:textColor="@android:color/white"
                android:text="@string/amount"
                app:layout_constraintEnd_toStartOf="@+id/txtType"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtId"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:padding="4sp"
                android:textColor="@android:color/white"
                android:text="@string/type"
                app:layout_constraintEnd_toStartOf="@+id/txtDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtAmount"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:padding="4sp"
                android:textColor="@android:color/white"
                android:text="@string/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtType"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/dataList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/header"/>
    </RelativeLayout>
</RelativeLayout>